fix: Firefox SVG text overlap remove white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ h2 .about-heading {
 /* Portfolio including BootSnippet */
 
 #portfolio-section {
-    padding: 40px 25px;
+    padding: 60px 25px;
     padding-top: 80px; 
     margin-top: -80px;
 }
